# public/openapi.json
@@ -855,7 +855,8 @@
           "actionType": {
             "type": "string",
             "enum": [
-              "DISMISS"
+              "DISMISS",
+              "OPEN_LINK"
             ]
           },
           "buttonDesign": {
@@ -864,6 +865,9 @@
               "FILLED",
               "TEXT"
             ]
+          },
+          "link": {
+            "type": "string"
           }
         }
       },
